src/cses/two_sets/clang-tidy.txt
1 warning and 1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/two_sets/two_sets.cpp.
/Users/michael/repos/competitive-programming/src/cses/two_sets/two_sets.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
/Users/michael/repos/competitive-programming/src/cses/two_sets/two_sets.cpp:40:5: warning: this loop is infinite; none of its condition variables (value) are updated in the loop body [bugprone-infinite-loop]
   40 |     for (std::uint64_t value{n}; value > 0; --value) {
      |     ^
Found compiler error(s).
